crates/squealy/tests/compile_fail/insert_select_foreign_table_target_column.stderr
error[E0271]: type mismatch resolving `<OtherSlug as ColumnKey>::Table == Dst<'static>`
  --> tests/compile_fail/insert_select_foreign_table_target_column.rs:24:35
   |
24 |     let _query = conn.to::<Dst>().insert_select(
   |                                   ^^^^^^^^^^^^^ type mismatch resolving `<OtherSlug as ColumnKey>::Table == Dst<'static>`
   |
note: expected this to be `Dst<'static>`
  --> tests/compile_fail/insert_select_foreign_table_target_column.rs:11:35
   |
11 | #[derive(Clone, Debug, PartialEq, Table)]
   |                                   ^^^^^
   = note: expected struct `Dst<'static>`
              found struct `Other<'static>`
   = note: required for `ColumnRef<'_, OtherSlug>` to implement `squealy::InsertSelectColumns<Dst<'static>>`
   = note: 1 redundant requirement hidden
   = note: required for `(ColumnRef<'_, DstName>, ColumnRef<'_, OtherSlug>)` to implement `squealy::InsertSelectColumns<Dst<'static>>`
note: required by a bound in `__SquealyDstWriteBuilder::<'conn, Conn, HNil, HNil, HNil, squealy::MutationUnfiltered, __SquealyDstNameWriteInsertState, __SquealyDstNameWriteUpdateState>::insert_select`
  --> tests/compile_fail/insert_select_foreign_table_target_column.rs:4:35
   |
 4 | #[derive(Clone, Debug, PartialEq, Table)]
   |                                   ^^^^^ required by this bound in `__SquealyDstWriteBuilder::<'conn, Conn, HNil, HNil, HNil, MutationUnfiltered, __SquealyDstNameWriteInsertState, __SquealyDstNameWriteUpdateState>::insert_select`
   = note: this error originates in the derive macro `Table` (in Nightly builds, run with -Z macro-backtrace for more info)
